--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img width="150" src="./image/logo_shopee.png">
             <div class="search flex-col">
                 <div class="search-box flex-row">
-                    <input type="text">
+                    <input type="text" placeholder="This page is made by Lutfi Ainunisa ">
                     <button><i class="bi bi-search"></i></button>
 
                 </div>
